--- a/data-science.html
+++ b/data-science.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=914&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=0a680935-4fdc-4c29-a4ed-85ca736c456c'>Data Science Lead</a></h5> 
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=914&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=0a680935-4fdc-4c29-a4ed-85ca736c456c'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -172,7 +172,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://medlanes.join.com/jobs/263024-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/263024-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -229,7 +229,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -237,7 +237,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -273,7 +273,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://motiion.recruiterbox.com/jobs/fk0jolc/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://motiion.recruiterbox.com/jobs/fk0jolc/'>
     Data Scientist - [Remote] - [Europe] at Motiion Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -283,7 +283,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AbercrombieAndFitchCo/743999692129326-data-scientist'>Abercrombie and Fitch Co. Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AbercrombieAndFitchCo/743999692129326-data-scientist'>Abercrombie and Fitch Co. Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbus, OH, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -307,7 +307,7 @@ Scientist to join our team in New York City! The Data...</p>
 delivering actionable insights on crop health directly to the field meaning farmers
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bulb.workable.com/jobs/1075234'>Senior Data Scientist - Apply online - Bulb - Jobs</a></h5> 
+<h5><a href='https://bulb.workable.com/jobs/1075234'>Senior Data Scientist - Apply online - Bulb - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 12, 2019 ... Use data insights to design and build Machine Learning algorithms. ? Design and 
 perform experiments to test the effectiveness of products we build and actions?...</p>
@@ -379,7 +379,7 @@ federal?...</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/averoinc/62bec7fa-9b50-4ad7-9daf-41587754d087'>Avero - Data Science Modeler</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/averoinc/62bec7fa-9b50-4ad7-9daf-41587754d087'>Avero - Data Science Modeler</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... You will have the opportunity to leverage Avero's robust historical/real time 
 datasets and machine learning infrastructure to develop and tackle the complex?...</p>
@@ -463,11 +463,11 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Cambridge Cambridge, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE'>Crisis Text Line - Jobs: Data Scientist, Behavioral Science Specialist - Apply online</a></h5> 
+<h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE'>Crisis Text Line - Jobs: Data Scientist, Behavioral Science Specialist - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://xebiacareers.recruitee.com/o/junior-data-engineer-april-2020'>
+<h5><a href='https://xebiacareers.recruitee.com/o/junior-data-engineer-april-2020'>
       Junior Data Scientist Xccelerated
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -479,7 +479,7 @@ and data science. A successful candidate should also have previous?...</p>
 engineer. Your work will impact millions of our customers. As part of the 
 Marketing?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobibike.recruitee.com/o/data-scientist-fmx'>
+<h5><a href='https://cobibike.recruitee.com/o/data-scientist-fmx'>
       Data Scientist (f/m/x) - COBI.Bike GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
